kubernetes/apps/media/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      serviceAccountName: plex-service-account
      dnsPolicy: ClusterFirst
      securityContext:
        supplementalGroups: [44, 993] # video and render
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: gpu
                    operator: In
                    values:
                      - "true"
      containers:
        - name: plex
          image: "plexinc/pms-docker:1.43.1.10611-1e34174b1"
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "2"
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 32400
              name: plex-ui
          volumeMounts:
            - name: plex-config
              mountPath: /config
            - name: media
              mountPath: /data
            - name: transcode
              mountPath: /transcode
            - name: igpu-device
              mountPath: /dev/dri
      volumes:
        - name: plex-config
          persistentVolumeClaim:
            claimName: plex-pvc
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
        - name: transcode
          emptyDir: {}
        - name: igpu-device
          hostPath:
            path: /dev/dri
