kubernetes/apps/media/plex/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-service-lb
  namespace: media
  annotations:
    metallb.io/loadBalancerIPs: 192.168.10.124
spec:
  selector:
    app: plex
  ports:
    - port: 32400
      targetPort: 32400
  type: LoadBalancer
