kubernetes/apps/media/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-service
  namespace: media
spec:
  selector:
    app: plex
  ports:
    - name: plex-ui
      port: 32400
      targetPort: 32400
      nodePort: 32400
  type: NodePort
