kubernetes/apps/media/plex/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`plex.poolnode.net`)
      kind: Rule
      services:
        - name: plex-service
          kind: Service
          namespace: media
          scheme: http
          port: 32400
  tls:
    secretName: poolnode-wildcard-tls
